# wave-os-shell

./: README.md
.github/workflows/: build.yml
docs/: SPEC.md  rust-build-context.md
src/: index.html  shell-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  file_bridge.rs  hotkeys.rs  main.rs  ollama.rs  process.rs  shell.rs  tray.rs  window.rs
