[package]
name = "wave-os-shell"
version = "1.0.0"
description = "Wave OS Desktop Shell"
edition = "2021"
authors = ["xBuildyTeam"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_Threading"
] }

[features]
default = ["app-mode"]
app-mode = []
shell-mode = []
kiosk-mode = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
